Mon Feb 12 12:58:10 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Add src/descriptions_store.c.
	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
	  po/ru.po, po/sv.po, po/vi.po: Update.

Mon Feb 12 12:42:44 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/es_ES.88591/man1/man.man1 (OPCIONES),
	  man/it_IT.88591/man1/man.man1 (OPZIONI),
	  man/ja_JP.eucJP/man1/man.man1 (オプション): Fix soft-hyphen
	  declarations to avoid error messages from groff.

Mon Feb 12 10:35:14 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.4.
	* configure.ac, docs/NEWS, man-db.lsm: Update.

Mon Feb 12 09:20:09 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (OPTIONS): Stop claiming that -d does not
	  display any manual pages (thanks, Dan Jacobson; Debian bug
	  #340910).

Mon Feb 12 09:04:17 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (main): Treat an empty LANGUAGE environment variable as
	  equivalent to it being unset.

Sun Feb 11 10:31:04 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Add forgotten item about SIGCHLD handling.

Sat Feb  3 10:08:03 GMT 2007  Giuseppe Sacco  <eppesuig@debian.org>

	* man/it_IT.88591/man1/man.man1: Update translation.
	* man/THANKS: Update translator credit.

Mon Jan 29 10:51:09 GMT 2007  Valéry Perrin  <valery.perrin.debian@free.fr>

	* man/fr_FR.88591: Add French man page translations.
	* .bzrignore: Add ignores under man/fr_FR.88591.
	* GNUmakefile.in (nls_man): Add fr_FR.88591.
	* man/THANKS: Add translator credit.

Mon Jan  8 13:31:15 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Partial update of tempname module from gnulib. (Once we switch to
	automake, it will be possible to import it properly.)

	* m4/tempname.m4: New file.
	* configure.ac: Use gl_FUNC_GEN_TEMPNAME.

Mon Jan  8 13:06:42 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/ToDo: Rename to ...