@@ -1,3 +1,11 @@
+Mon Feb 12 13:00:42 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/mandb.c (main): Change "No databases updated" to "No databases
+	  created" now that we're no longer string-frozen.
+	* po/ca.po, po/cs.po, po/da.po, po/de.po, po/es.po, po/fi.po,
+	  po/fr.po, po/it.po, po/ja.po, po/pl.po, po/pt_BR.po, po/ro.po,
+	  po/ru.po, po/sv.po, po/vi.po: Update.
+
 Mon Feb 12 12:58:10 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* po/POTFILES.in: Add src/descriptions_store.c.
